feat(html, css):input container

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
       <div class="container-input">
         <div class="price">
           <p>Bill</p>
-          <input type="text" />
+          <input class="input-custom" type="text" placeholder="0" />
         </div>
-        <div class="pourcent-tip">
+        <div class="percent-tip">
           <p>Select Tip %</p>
           <button type="button">5%</button>
           <button type="button">10%</button>
           <button type="button">15%</button>
           <button type="button">25%</button>
           <button type="button">50%</button>
-          <input type="text" placeholder="Custom" />
+          <input class="input-percent" type="text" placeholder="Custom" />
         </div>
         <div class="number-people">
           <p>Number of People</p>
           <span></span>
-          <input type="text" />
+          <input class="input-custom" type="text" placeholder="0" />
         </div>
       </div>
       <div class="container-output">
