--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         </div>
         <div class="percent-tip">
           <p>Select Tip %</p>
-          <button type="button">5%</button>
-          <button type="button">10%</button>
-          <button type="button">15%</button>
-          <button type="button">25%</button>
-          <button type="button">50%</button>
+          <button type="button" value="5">5%</button>
+          <button type="button" value="10">10%</button>
+          <button type="button" value="15">15%</button>
+          <button type="button" value="25">25%</button>
+          <button type="button" value="50">50%</button>
           <input class="input-percent" type="text" placeholder="Custom" />
         </div>
         <div class="number-people">
