--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
             <p>Tip Amount</p>
             <p>/ person</p>
           </div>
-          <span class="calcul-output">$0.00</span>
+          <span class="calcul-output amount">$0.00</span>
         </div>
         <div class="output-user">
           <div class="content-output-user">
             <p>Total</p>
             <p>/ person</p>
           </div>
-          <span class="calcul-output">$0.00</span>
+          <span class="calcul-output total">$0.00</span>
         </div>
         <button class="btn-output">Reset</button>
       </div>
