feat: js input output

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="container-input">
         <div class="price">
           <p>Bill</p>
-          <input class="input-custom bill" type="text" placeholder="0" />
+          <input class="input-custom bill refresh" type="text" placeholder="0" />
         </div>
         <div class="percent-tip">
           <p>Select Tip %</p>
@@ -34,12 +34,12 @@
           <button class="btn-percent" type="button" value="15">15%</button>
           <button class="btn-percent" type="button" value="25">25%</button>
           <button class="btn-percent" type="button" value="50">50%</button>
-          <input class="input-percent" type="text" placeholder="Custom" />
+          <input class="input-percent refresh" type="text" placeholder="Custom" />
         </div>
         <div class="number-people">
           <p>Number of People</p>
           <span></span>
-          <input class="input-custom people" type="text" placeholder="0" />
+          <input class="input-custom people refresh" type="text" placeholder="0" />
         </div>
       </div>
       <!-- OUTPUT USER -->
@@ -49,16 +49,16 @@
             <p>Tip Amount</p>
             <p>/ person</p>
           </div>
-          <span class="calcul-output">$0.00</span>
+          <span class="calcul-output amount">$0.00</span>
         </div>
         <div class="output-user">
           <div class="content-output-user">
             <p>Total</p>
             <p>/ person</p>
           </div>
-          <span class="calcul-output">$0.00</span>
+          <span class="calcul-output total">$0.00</span>
         </div>
-        <button class="btn-output">Reset</button>
+        <button type="button" class="btn-output">Reset</button>
       </div>
     </main>
     Bill Select Tip % 5% 10% 15% 25% 50% Custom Number of People Tip Amount / person Total / person Reset
