feat: functionality calcul bill

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
           <input class="input-percent refresh" type="text" placeholder="Custom" />
         </div>
         <div class="number-people">
-          <p>Number of People</p>
-          <span></span>
+          <div>
+            <p>Number of People</p>
+            <span class="people-text"></span>
+          </div>
           <input class="input-custom people refresh" type="text" placeholder="0" />
         </div>
       </div>
