--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="number-people">
           <p>Number of People</p>
-          <span></span>
+          <span class="errorNumber"></span>
           <input class="input-custom people" type="text" placeholder="0" />
         </div>
       </div>
