--- a/index.html
+++ b/index.html
@@ -63,10 +63,21 @@
         <button type="button" class="btn-output">Reset</button>
       </div>
     </main>
-    Bill Select Tip % 5% 10% 15% 25% 50% Custom Number of People Tip Amount / person Total / person Reset
-
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
+      <div>
+        <div>
+          <p>Challenge by</p>
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+        </div>
+        <div>
+          <p>Coded by</p>
+          <div class="contributor">
+            <a href="https://github.com/Alain-sys">Alain-sys</a>
+            <p>&</p>
+            <a href="https://github.com/Vcna-0">Vcna-0</a>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="scripts/index.js"></script>
   </body>
