--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
   <body>
     <header>
-      <a href="index.html" alt="redirect to home page">
-        <img src="images/logo.svg" alt="Tip calculator app logo, splitter in dark green" />
+      <a href="index.html">
+        <img src="images/logo.svg" alt="redirect to home page" />
       </a>
     </header>
     <main>
